--- a/bms.py.org
+++ b/bms.py.org
@@ -1,3 +1,5 @@
+
+
 import paho.mqtt.client as mqtt
 import socket
 import time
@@ -44,9 +46,9 @@ repub_discovery = 0
 
 bms_version = ''
 bms_sn = ''
-pack_sn = '0815'
+pack_sn = ''
 packs = 1
-cells = 16
+cells = 13
 temps = 6
 
 
@@ -114,7 +116,7 @@ def bms_sendData(comms,request=''):
         try:
             if len(request) > 0:
                 comms.write(request)
-                time.sleep(0.05) #0.25
+                time.sleep(0.25)
                 return True
         except IOError as e:
             print("BMS serial error: %s" % e)
@@ -138,11 +140,7 @@ def bms_get_data(comms):
         if connection_type == "Serial":
             inc_data = comms.readline()
         else:
-            temp = bytes()
-            
-            while len(temp) == 0 or temp[-1] != 13:
-                temp = temp + comms.recv(4096)
-
+            temp = comms.recv(4096)
             temp2 = temp.split(b'\r')
             # Decide which one to take:
             for element in range(0,len(temp2)):
@@ -150,11 +148,14 @@ def bms_get_data(comms):
                 if SOI == '0x7e':
                     inc_data = temp2[element] + b'\r'
                     break
-           # print("...for incoming data: " + str(temp) + " |Hex: " + str(temp.hex(' ')))
+
+            if (len(temp2) > 2) & (debug_output > 0):
+                print("Multiple EOIs detected")
+                print("...for incoming data: " + str(temp) + " |Hex: " + str(temp.hex(' ')))
         return inc_data
     except Exception as e:
         print("BMS socket receive error: %s" % e)
-          #global bms_connected
+        # global bms_connected
         return False
 
 def ha_discovery():
@@ -501,7 +502,7 @@ def bms_parse_data(inc_data):
 
         if debug_output > 1:
             print("CHKSUM: ", CHKSUM)
-            print("EOI: ", hex(inc_data[13+LENID+4]))
+            #print("EOI: ", hex(inc_data[13+LENID+4]))
 
         calc_CHKSUM = chksum_calc(inc_data[:len(inc_data)-5])
 
@@ -681,7 +682,7 @@ def bms_getSerial(comms):
     try:
 
         bms_sn = bytes.fromhex(INFO[0:30].decode("ascii")).decode("ASCII").replace(" ", "")
-       # pack_sn = bytes.fromhex(INFO[40:68].decode("ascii")).decode("ASCII").replace(" ", "")
+        pack_sn = bytes.fromhex(INFO[40:68].decode("ascii")).decode("ASCII").replace(" ", "")
         client.publish(config['mqtt_base_topic'] + "/bms_sn",bms_sn)
         client.publish(config['mqtt_base_topic'] + "/pack_sn",pack_sn)
         print("BMS Serial Number: " + bms_sn)
@@ -739,7 +740,7 @@ def bms_getAnalogData(bms,batNumber):
                     byte_index += 2
                     cells = int(inc_data[byte_index:byte_index+2],16)
                     if cells != cells_prev:
-                        print("Error parsing BMS analog Daten: Cannot read multiple packs")
+                        print("Error parsing BMS analog data: Cannot read multiple packs")
                         return(False,"Error parsing BMS analog data: Cannot read multiple packs")
 
             if print_initial:
@@ -1090,10 +1091,10 @@ success, data = bms_getVersion(bms)
 if success != True:
     print("Error retrieving BMS version number")
 
-time.sleep(0.1) #0,1
+time.sleep(0.1)
 success, bms_sn, pack_sn = bms_getSerial(bms)
-#if success != True:
-#    print("Error retrieving BMS and pack serial numbers. This is required for HA Discovery. Exiting...")
+if success != True:
+    print("Error retrieving BMS and pack serial numbers. This is required for HA Discovery. Exiting...")
 #    quit()
 
 
